# travel-scrapping

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  RTK.md  TODO.md  main.py  pyproject.toml
.claude/: settings.json
.claude/skills/: claude-connect
.codex/: hooks.json
.codex/hooks/: rtk_guard.py
config/: destinations.yaml
docs/: providers.md
docs/strategy/: INDEX.md  PRODUCT_STRATEGY.md  ROADMAP.md
docs/tasks/archive/: 001-travel-scrapping-mvp.md  002-sqlite-price-observations.md  003-api-ninjas-airports.md  (+22 more)
tests/: test_airports.py  test_bus.py  test_cli.py  test_config.py  test_date_grid.py  test_db.py  test_email.py  test_engine.py  test_filters.py  test_formatters.py  test_normalizer.py  test_presentation.py  test_scoring.py  test_strategy_docs.py  test_templates.py  test_web.py
tests/providers/: test_ryanair.py  test_serpapi_google_flights.py  test_travelpayouts.py
tools/: smoke_google_flight_deals.py  smoke_google_travel_explore.py
travel_scrapping/: airports.py  cli.py  config.py  db.py  formatters.py  main.py  schemas.py
travel_scrapping/airports/: __init__.py  ourairports.py
travel_scrapping/bus/: __init__.py  base.py  comparabus.py  flixbus_autocomplete.py  flixbus_gtfs.py  flixbus_openapi.py  flixbus_rapidapi.py  parser.py  stations.py
travel_scrapping/email/: brevo.py  renderer.py
travel_scrapping/providers/: __init__.py  api_ninjas_airports.py
travel_scrapping/search/: date_grid.py  engine.py  filters.py  normalizer.py  scoring.py
travel_scrapping/web/: presentation.py  routes.py
(+28 files in other folders)
