[project]
name = "travel-scrapping"
version = "0.1.0"
description = "FastAPI + HTMX dashboard for cheap round-trip flight deal discovery from Nice."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "httpx>=0.27",
  "pydantic-settings>=2.3",
  "sqlalchemy>=2.0",
  "pyyaml>=6.0",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "respx>=0.21",
  "ruff>=0.5",
  "pyright>=1.1",
]
playwright = ["playwright>=1.45"]

[tool.setuptools.packages.find]
include = ["travel_scrapping*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["travel_scrapping"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pyright]
include = ["travel_scrapping"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
